--- a/deno.jsonc
+++ b/deno.jsonc
@@ -4,6 +4,9 @@
     "rules": {
       "tags": [
         "recommended"
+      ],
+      "exclude": [
+        "no-explicit-any"
       ]
     },
     "files": {
